BUG#55377 max_binlog_cache_size does not work as specified

The binary log is created with a maximum size defined by
max (max_binlog_cache_size, binlog_cache_size) and not by
the max_binlog_cache_size as one expects. 

To fix this behavior, we issue a warning message when the
binlog_cache_size is greater than the max_binlog_cache_size
and set binlog_cache_size to max_binlog_cache_size.